Review access change
Change-Id: I3abe233ef77d238bb3e2cab787941fcbf0417f62

--- a/project.config
+++ b/project.config
@@ -4,3 +4,5 @@
 	action = inherit
 [access "refs/*"]
 	owner = group user/子龙zj (SubDragonzj)
+	read = group Device Maintainers
+	read = block group Anonymous Users
